# just

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
benches/: benchmark_runner.rs
src/: engine.rs  lib.rs
src/parser/: api.rs  ast.rs  ast_unit_tests.rs  js_grammar.pest  js_grammar0.pest  mod.rs  numeric_string_unit_tests.rs  static_semantics.rs  unit_tests.rs  util.rs
src/runner/: api.rs  ds.rs  mod.rs  model.rs
src/runner/ds/: arguments_object.rs  array_object.rs  env_record.rs  error.rs  execution_context.rs  function_object.rs  heap.rs  iterator_object.rs  lex_env.rs  misc.rs  mod.rs  object.rs  object_property.rs  realm.rs  scope.rs  string_object.rs  symbol.rs  value.rs
src/runner/ds/operations/: lex_env.rs  mod.rs  object.rs  script.rs  test_and_comparison.rs  type_conversion.rs
src/runner/eval/: expression.rs  function.rs  mod.rs  statement.rs  types.rs
src/runner/jit/: bytecode.rs  compiler.rs  mod.rs  reg_bytecode.rs  reg_compiler.rs  reg_jit.rs  reg_vm.rs  vm.rs
src/runner/plugin/: config.rs  core_resolver.rs  mod.rs  registry.rs  resolver.rs  super_global.rs  types.rs
src/runner/std_lib/: array.rs  console.rs  core.rs  error.rs  json.rs  math.rs  mod.rs  number.rs  object.rs  string.rs
tests/: parser_util.rs  test_eval.rs  test_integration.rs  test_interpreter_superglobal.rs  test_jit.rs  test_parser.rs  test_reg_jit.rs  test_std_lib.rs
tests/artifacts/: assertpt_arrows.txt  assertpt_bin_octal.txt  assertpt_classes.txt  assertpt_default_rest_spread.txt  assertpt_destruct.txt  assertpt_for_of.txt  assertpt_generator.txt  assertpt_let_const.txt  assertpt_new_std_lib_funcs.txt  assertpt_object_literals.txt  assertpt_promises.txt  assertpt_string_templates.txt  assertpt_symbols.txt  assertpt_tail_calls.txt  test_arrows.js  test_classes.js  test_default_rest_spread.js  test_generator.js  test_let_const.js  test_symbols.js
tests/artifacts/abstract_syntax_trees/: bin_octal.txt  closure.txt  default_rest_spread.txt  simple.txt
tests/artifacts/parse_trees/: assertpt_arrows.txt  assertpt_closure.txt  assertpt_generator.txt  bin_octal.txt  classes.txt  closure.txt  default_rest_spread.txt  simple.txt  tail_calls.txt
tests/artifacts/test_js/: test_closure.js  test_destruct.js  test_for_of.js  test_object_literals.js  test_simple.js
