[package]
name = "just"
version = "0.1.0"
authors = ["Nirupam Biswas <email@nirupam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.6"
pest_consume_macros = "1.0.6"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
cranelift = "0.104"
cranelift-jit = "0.104"
cranelift-module = "0.104"
cranelift-native = "0.104"

[[bin]]
name = "just"
path = "src/bin/just.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bench]]
name = "benchmark_runner"
path = "benches/benchmark_runner.rs"
harness = false

