[package]
name = "just"
version = "0.1.0"
authors = ["Nirupam Biswas <applegrew+cratesio@gmail.com>"]
edition = "2018"
description = "A ground-up ES6 JavaScript engine with tree-walking interpreter, bytecode VMs, and Cranelift JIT compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/applegrew/just"
homepage = "https://github.com/applegrew/just"
documentation = "https://docs.rs/just"
readme = "README.md"
keywords = ["javascript", "js", "interpreter", "jit", "compiler"]
categories = ["compilers", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.6"
pest_consume_macros = "1.0.6"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
cranelift = "0.104"
cranelift-jit = "0.104"
cranelift-module = "0.104"
cranelift-native = "0.104"

[[bin]]
name = "just"
path = "src/bin/just.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bench]]
name = "benchmark_runner"
path = "benches/benchmark_runner.rs"
harness = false

